{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 1768,
  "lineage": "707bcfd0-8528-15ba-62b0-51da4070b168",
  "resources": [
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:201118949681:security-group/sg-034be7cc1079dbf4f",
            "description": "EKS cluster security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bd1dc24bc1350355"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bd1dc24bc1350355"
                ],
                "self": false,
                "to_port": 10250
              }
            ],
            "id": "sg-034be7cc1079dbf4f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bd1dc24bc1350355"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "cloud-computing-cluster-2023042616173132350000000c",
            "name_prefix": "cloud-computing-cluster-",
            "owner_id": "201118949681",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "cloud-computing-cluster",
              "Project": "cloud-computing",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "cloud-computing-cluster",
              "Project": "cloud-computing",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d78b47bdfed0c393"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:201118949681:security-group/sg-0bd1dc24bc1350355",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/TCP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/UDP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress all HTTPS to internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Node all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-034be7cc1079dbf4f"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "id": "sg-0bd1dc24bc1350355",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "kubernetes.io/rule/nlb/client=ab691f5e3388d48dea030c0aa5ed8a49",
                "from_port": 31781,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 31781
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "kubernetes.io/rule/nlb/client=ab691f5e3388d48dea030c0aa5ed8a49",
                "from_port": 32683,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32683
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "kubernetes.io/rule/nlb/mtu",
                "from_port": 3,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 4
              },
              {
                "cidr_blocks": [],
                "description": "Allow access from control plane to webhook port of Nginx Ingress Controller",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-034be7cc1079dbf4f"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-034be7cc1079dbf4f"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-034be7cc1079dbf4f"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node all ports/protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "cloud-computing-node-2023042616173137910000000d",
            "name_prefix": "cloud-computing-node-",
            "owner_id": "201118949681",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "cloud-computing-node",
              "Project": "cloud-computing",
              "Terraform": "true",
              "kubernetes.io/cluster/cloud-computing": "owned"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "cloud-computing-node",
              "Project": "cloud-computing",
              "Terraform": "true",
              "kubernetes.io/cluster/cloud-computing": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d78b47bdfed0c393"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-120497812",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-034be7cc1079dbf4f",
            "security_group_rule_id": "sgr-0a33db015ac481d67",
            "self": false,
            "source_security_group_id": "sg-0bd1dc24bc1350355",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2199982815",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-034be7cc1079dbf4f",
            "security_group_rule_id": "sgr-04373a50fa720469b",
            "self": false,
            "source_security_group_id": "sg-0bd1dc24bc1350355",
            "timeouts": null,
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2188254278",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-034be7cc1079dbf4f",
            "security_group_rule_id": "sgr-09c96946245ae8efc",
            "self": false,
            "source_security_group_id": "sg-0bd1dc24bc1350355",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Node all egress",
            "from_port": 0,
            "id": "sgrule-3519603358",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0bd1dc24bc1350355",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1666517265",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bd1dc24bc1350355",
            "security_group_rule_id": "sgr-09b261be2a3d67b6a",
            "self": false,
            "source_security_group_id": "sg-034be7cc1079dbf4f",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-1302162664",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bd1dc24bc1350355",
            "security_group_rule_id": "sgr-02e853039729116c8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-2453885430",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bd1dc24bc1350355",
            "security_group_rule_id": "sgr-00a83ccb97c09193c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-3973936379",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0bd1dc24bc1350355",
            "security_group_rule_id": "sgr-027870c55904f2ff1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1648055802",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bd1dc24bc1350355",
            "security_group_rule_id": "sgr-0fa071330e2f8cc36",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3965507484",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0bd1dc24bc1350355",
            "security_group_rule_id": "sgr-0113d6c54de859304",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_allow_access_from_control_plane",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow access from control plane to webhook port of Nginx Ingress Controller",
            "from_port": 8443,
            "id": "sgrule-683071538",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bd1dc24bc1350355",
            "security_group_rule_id": "sgr-042b62926f4f038ea",
            "self": false,
            "source_security_group_id": "sg-034be7cc1079dbf4f",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2698695246",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bd1dc24bc1350355",
            "security_group_rule_id": "sgr-047570ee6ae48511c",
            "self": false,
            "source_security_group_id": "sg-034be7cc1079dbf4f",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2108451230",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bd1dc24bc1350355",
            "security_group_rule_id": "sgr-0d14ea473710f6b61",
            "self": false,
            "source_security_group_id": "sg-034be7cc1079dbf4f",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node all ports/protocols",
            "from_port": 0,
            "id": "sgrule-942580556",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0bd1dc24bc1350355",
            "security_group_rule_id": "sgr-08cd59ac90989ac05",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-671172074",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bd1dc24bc1350355",
            "security_group_rule_id": "sgr-00d925e88461ac87b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2355029509",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0bd1dc24bc1350355",
            "security_group_rule_id": "sgr-0113d6c54de859304",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:201118949681:subnet/subnet-079a250141e229202",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "30.0.1.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079a250141e229202",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "201118949681",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "cloud-computing-private-us-east-1a",
              "Project": "cloud-computing",
              "Terraform": "true",
              "kubernetes.io/cluster/cloud-computing": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "cloud-computing-private-us-east-1a",
              "Project": "cloud-computing",
              "Terraform": "true",
              "kubernetes.io/cluster/cloud-computing": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d78b47bdfed0c393"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:201118949681:subnet/subnet-066632bb3b8728b1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "30.0.1.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066632bb3b8728b1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "201118949681",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "cloud-computing-private-us-east-1b",
              "Project": "cloud-computing",
              "Terraform": "true",
              "kubernetes.io/cluster/cloud-computing": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "cloud-computing-private-us-east-1b",
              "Project": "cloud-computing",
              "Terraform": "true",
              "kubernetes.io/cluster/cloud-computing": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d78b47bdfed0c393"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:201118949681:vpc/vpc-0d78b47bdfed0c393",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "30.0.1.0/24",
            "default_network_acl_id": "acl-0d0209e5bf0c479ba",
            "default_route_table_id": "rtb-065598d02073df824",
            "default_security_group_id": "sg-056214978d56ba302",
            "dhcp_options_id": "dopt-088f2d6f07c191780",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d78b47bdfed0c393",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-065598d02073df824",
            "owner_id": "201118949681",
            "tags": {
              "Environment": "production",
              "Name": "cloud-computing",
              "Project": "cloud-computing",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "cloud-computing",
              "Project": "cloud-computing",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}